--- a/assets/css/auto.css
+++ b/assets/css/auto.css
@@ -11,6 +11,7 @@
 
 
 }
+
 *{
   box-sizing: border-box;
   padding: 0;
@@ -22,7 +23,7 @@
 
 
 nav {
-  background-color: var(--white);
+  background-color: rgba(19, 18, 18, 0.048);
   color: var(--dark);
   width: 100%;
   height: 50px;
@@ -53,21 +54,76 @@ nav {
 }
 
 .menu li a:hover {
-  color: var(--base)
-  ;
+  color: var(--base);
+  
 }
 
 .active{
   color: var(--base) !important;
+  font-weight: bold;
 }
 
 .logo{
   width: 35px;
   height: 35px;
 }
+
+/* **********************  fin de nav ************************* */
+.banner{
+  width: 100%;
+  height: 500px;
+  background-image: url('../pictures/banner.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+
+  padding: 20px;
+}
+ 
+
+.banner_text{
+  padding: 10px;
+  height: 30%;
+  width: 50%;
+
+  position: absolute;
+  color: var(--white);
+ 
+  right: 25%;
+  top:20%;
+
+  
+  
+
+}
+.banner_text h1{
+  font-family: 'Rokkitt', serif;
+  font-size: xx-large;
+  text-transform: uppercase;
+  color: #FF3387;
+  margin-bottom: 10px;
+}
+.banner_text h2{
+  font-size: larger;
+  text-transform: capitalize;
+  font-family: 'lato';
+  margin-bottom: 10px;
+}
+
+/* **********************  fin de banner ************************* */
+
+
+
+
+
+
+
+
+
   /* Responsive layout - makes a one column 
   layout instead of a two-column layout  tablette portable*/
   @media (max-width: 800px) {
+
     *{
       box-sizing: border-box;
       padding: 0;
@@ -75,7 +131,7 @@ nav {
     }
 
     nav {
-      background-color: var(--white);
+      background-color: rgba(19, 18, 18, 0.048);
       color: var(--dark);
       width: 100%;
       height: fit-content;
@@ -85,7 +141,6 @@ nav {
     .menu {
       flex-direction: column;
     }
-   
+
     
-  
   }
