--- a/assets/css/auto.css
+++ b/assets/css/auto.css
@@ -118,6 +118,7 @@ nav {
 
 
 
+/* **********************  fin de banner ************************* */
 
 
   /* Responsive layout - makes a one column 
