--- a/assets/css/auto.css
+++ b/assets/css/auto.css
@@ -133,9 +133,10 @@ section .parti2{
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  -ms-flex-align: start;
 }
 section .voiture{
-  margin: 20px;
+  margin: 10px;
 	text-align: center;
 }
 
@@ -151,6 +152,29 @@ section .voiture{
   font-size: 20px;
   color: #333;
 }
+
+section .catalogue h1{
+  margin-top: 50px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--red);
+  font-family: 'lato', sans-serif;
+  margin-bottom: 10px;
+  font-size: xx-large;
+}
+.catalogues_liens{
+  margin-top: 50px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--red);
+  font-family: 'lato', sans-serif;
+  margin-bottom: 10px;
+  font-size: xx-large;
+  text-decoration: none;
+}
+
+
+
 /* **********************  fin de section ************************* */
 
 
