--- a/assets/css/auto.css
+++ b/assets/css/auto.css
@@ -91,6 +91,8 @@
         font-size: 1rem;
         text-align: center;
         text-shadow: 2px 2px var(--gris);
+        border-left: var(--blanc) 5px solid;
+        padding-left: 10px;
     }
 
 
