--- a/assets/css/auto.css
+++ b/assets/css/auto.css
@@ -3,6 +3,7 @@
     --bleue_base:#06668C;
     --bleue_second:#427AA1;
     --blanc:#EBF2FA;
+    --blanc-claire:#fff;
     --vert_base:#679436;
     --vert_second:#A4BD01;
     --gris:#333;
@@ -17,9 +18,8 @@
 }
  
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cantarell&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cantarell&family=Lato:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rokkitt&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap');
  
 
 /* header */
@@ -97,16 +97,18 @@
         margin-bottom: 20px;
       }
       .banner h6{
-        color: var(--blanc);
+        color: var(--blanc-claire);
         font-size: 1rem;
         text-align: center;
         text-shadow: 2px 2px var(--gris);
-        border-left: var(--blanc) 5px solid;
+        border-left: var(--blanc-claire) 5px solid;
         padding-left: 10px;
         margin-bottom: 20px;
     }
 
-/* DEBUT DE CORPS   */    
+/* DEBUT DE CORPS   */  
+
+
     .corps{
       background-size: cover;
       background-position: center center;
@@ -117,28 +119,68 @@
       /* align-items: center; */
       justify-content: space-between;
 
-      padding-right: 40px;
-      background-color: var(--blanc);
+      padding: 20px;
+      background-color: var(--blanc-claire);
     }
 
     .corps h1 {
       font-family: 'Cantarell', sans-serif;
       margin-top: var(--ecart-haute);
-      color: var(--vert_base);
+      color: var(--gris);
       font-size: 2.5rem;
       text-align: center;
       text-transform: uppercase;
     }
     .corps hr {
-     width:10% ;
+     width:8% ;
      height: 5px;
-     background-color: var(--vert_base);
+     background-color: var(--bleue_base);
      text-align: center;
      margin:20px auto;
     }
 
+    .toyota_yaris{
+      display: flex;
+      justify-content: flex-start;
+      flex-wrap: wrap;
+      margin-top: var(--ecart-haute);
+      gap: 20px;
+      align-items: center;
+    }
+
+    .toyota_yaris img{
+      height: 60vh;
+    }
+    .toyota_yaris .un {
+      text-transform: capitalize;
+      font-size: 1.5rem;
+      font-family: 'Lato', sans-serif;
+      color: var(--bleue_second);
+    }
+    .toyota_yaris .deux {
+      text-transform: lowercase;
+      font-size: 1rem;
+      font-family: 'Lato', sans-serif;
+      
+    }
+
+    .toyota_yaris .deux ol {
+      list-style: none;
+      color: var(--gris);
+      
+    }
+    .toyota_yaris .deux ol li {
+    margin-bottom: 4px;
+    
+      
+    }
+
 
 /* FIN DE CORPS   */
+
+/* DEBUT DE GAME */
+
+/* FIN DE GAMMES */
   
   @media only screen and (max-width: 768px) {
     nav {
