--- a/assets/css/auto.css
+++ b/assets/css/auto.css
@@ -301,6 +301,22 @@
   font-weight: bold;
 }
 /* FIN DE GAMMES */
+.nous{
+  
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+  display: flex;
+  /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+  justify-content: space-between;
+
+  padding: 20px;
+  background-color: var(--blanc-claire);
+  
+}
+/* FIN NOUS */
 
 
 
