--- a/assets/css/auto.css
+++ b/assets/css/auto.css
@@ -344,8 +344,17 @@
     }
 /* FIN NOUS */
 
-
-
+/* FOOTER */
+footer {
+  background-color: #333; /* couleur de fond noire */
+  color: #fff; /* couleur de texte blanche */
+  padding: 20px; /* espace intérieur de 20 pixels */
+  text-align: center; /* centrage horizontal du contenu */
+  position: fixed; /* position fixe en bas de la page */
+  left: 0; /* alignement à gauche */
+  bottom: 0; /* alignement en bas */
+  width: 100%; /* largeur de 100% */
+}
 
   @media only screen and (max-width: 768px) {
     nav {
