--- a/assets/css/apropos.css
+++ b/assets/css/apropos.css
@@ -37,9 +37,10 @@
   }
 
   .main_apropos h3{
-    color: var(--gris);
+    color: var( --bleue_base);
     margin-bottom: 10px;
     font-family: 'lato', sans-serif ;
+
   }
 
   .main_apropos p{
