--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,10 @@
 @media only screen and (max-width: 900px) {
+    *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+
     nav {
         display: flex;
         justify-content: flex-start;
@@ -35,6 +41,45 @@
         margin: 0;
         padding: 0;
         gap: 20px;
+    }
+
+    .banner {
+        background-image: url("../pictures/fonds/luke-chesser-pJadQetzTkI-unsplash.jpg ");
+        background-size: cover;
+        background-position: center center;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /* justify-content: space-between; */
+
+        padding-right: 20px;
+      }
+
+      .banner h1 {
+        color: var(--blanc);
+        font-size: 2rem;
+        text-align: center;
+        text-shadow: 2px 2px var(--gris);
+        margin-bottom: 10px;
+      }
+      
+      .banner h5{       
+        color: var(--blanc);
+        font-size: 1.2rem;
+        text-align: center;
+        text-shadow: 2px 2px var(--gris);
+        margin-bottom: 20px;
+      }
+      .banner h6{
+        color: var(--blanc-claire);
+        font-size: 1rem;
+        text-align: center;
+        /* text-shadow: 2px 2px var(--gris); */
+        /* border-top: var(--blanc-claire) 1px solid !important; */
+        padding-left: 10px;
+        margin-left: 20px;
     }
   }
 
