--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -104,6 +104,89 @@
       font-family: 'Lato', sans-serif;
       
     }
+/* DEBUT DE GAME */
+.game_toyota{
+    background-size: cover;
+    background-position: center center;
+    height: fit-content;
+    /* display: flex;
+    flex-direction: column; */
+    /* justify-content: center; */
+    align-items: center;
+    /* justify-content: space-between; */
+  
+    padding: 20px;
+    background-color : var(--fond3);
+  }
+
+    .game_toyota .list_voitures{
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 30px;
+        
+      }
+        .list_voitures_items{
+        font-family: 'Lato', sans-serif;
+        height: 40vh;
+        padding: 10px;
+        color: var(--gris);
+
+        border-bottom: 1px white  solid !important;
+        
+    }
+    .list_voitures_items img{
+        height: 25vh;
+      }
+
+
+
+      .catalogues{
+        font-family: 'Cantarell', sans-serif;
+        
+        font-size: 1rem;
+        text-align: center;
+        text-transform: uppercase;
+        border-radius: 20px;
+        border: 1px var(--rouge) solid ;
+        margin: var(--ecart-haute) auto;
+        width: 30%;
+        padding: 10px;
+        
+      }
+
+      .nous{
+  
+        background-size: cover;
+        background-position: center center;
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px;
+        background-color: var(--blanc-claire);
+        gap: 40px;
+      }
+
+      .nous .nous_items{
+        font-family: 'Lato', sans-serif;
+        height: 20vh;
+        padding: 20px;
+        color: var(--gris);
+        background-color: #f5f5f5;
+      }
+
+
+
+
+
+
+
   }
 
 
