--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,6 +3,8 @@
         padding: 0;
         margin: 0;
         box-sizing: border-box;
+        max-height: fit-content;
+        overflow: scroll;
     }
 
     nav {
